# bwapi

./: CHANGELOG.md  README.md
Release_Binary/Chaoslauncher/: .gitignore
Release_Binary/Chaoslauncher/Plugins/: .gitignore
Release_Binary/Starcraft/: .gitignore
Release_Binary/Starcraft/bwapi-data/: .gitignore
bwapi/: CMakeLists.txt  revisionUpdate.bat
bwapi/BWAPI/: CMakeLists.txt
bwapi/BWAPI/Source/: GameUpdate.cpp
bwapi/BWAPI/Source/BW/: OrderTypes.cpp  PositionUnitTarget.cpp  UnitTarget.cpp
bwapi/BWAPI/Source/BWAPI/: AutoMenuManager.cpp  AutoMenuManager.h  BulletImpl.cpp  BulletImpl.h  GameBullets.cpp  GameCommands.cpp  GameDrawing.cpp  GameEvents.cpp  GameImpl.cpp  GameImpl.h  GameInternals.cpp  GameMenu.cpp  GameUnits.cpp  Map.cpp  PlayerImpl.cpp  PlayerImpl.h  RegionImpl.cpp  Server.cpp  UnitImpl.cpp  UnitImpl.h  UnitUpdate.cpp
bwapi/BWAPICore/: Makefile
bwapi/BWAPILIB/Source/: Unit.cpp
bwapi/BWAPILauncher/Source/: Main.cpp
bwapi/OpenBWData/: CMakeLists.txt
bwapi/OpenBWData/BW/: BWData.cpp  BWData.h
bwapi/Shared/: Templates.h
bwapi/include/BWAPI/: Game.h
bwapi/libReplayToolTest/TestData/: .gitignore
